# kivy_apps

./: .gitignore  CHANGELOG.txt  README.md  buildozer.spec  main.py  pyproject.toml  requirements.txt  testapp.kv
.github/workflows/: main.yml
hello_word/: hello.py
hello_world/: android.txt  buildozer.spec  main.py
http_requester/: android.txt  buildozer.spec  main.py  testapp.kv
kitchen_sink/: buildozer.spec
kivy_app/: testapp.kv
pong/: android.txt  buildozer.spec  main.py  pong.kv  pong.py
whatsapp_ui/: android.txt  buildozer.spec  main.kv  main.py
whatsapp_ui/kivymd/uix/: list.py
