[tool.poetry]
name = "kivy_dev"
version = "0.1.0"
description = ""
authors = ["Hemanta Sharma <sharmahemanta.212@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
kivy = "^1.11.1"
pillow = "^8.3.2"
"kivy_deps.sdl2" = "^0.2.0"
"kivy_deps.glew" = "^0.2.0"
docutils = "^0.16"
pygments = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
